--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 			<version>2.4.5</version>
 		</dependency>
+		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>3.15.0</version>
+		</dependency>
 
 
 	</dependencies>
