--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,14 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-#spring.datasource.password=
+spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
+
+#Production,Dev,Local
+spring.profiles.active=Local
+#http, jwt`
+spring.security.type=jwt
+spring.security.token.expirationTime=300000
+spring.security.token.secret=HardToQuesSecret
