added cache in post endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.profiles.active=Local
 spring.security.type=jwt
 spring.security.token.expirationTime=300000
 spring.security.token.secret=HardToQuesSecret
+
+spring.cache.jcache.config=classpath:ehcache.xml
