--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,14 @@
 			<version>1.1.1</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-test -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-test</artifactId>
+			<version>5.4.6</version>
+			<scope>test</scope>
+		</dependency>
+
 
 	</dependencies>
 
