modify common response

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,11 @@ spring.jpa.show-sql=true
 
 #Production,Dev,Local
 spring.profiles.active=Local
-#http, jwt`
+#http, jwt
 spring.security.type=jwt
-spring.security.token.expirationTime=300000
+spring.security.token.expirationTime=3000000
 spring.security.token.secret=HardToQuesSecret
 
 spring.cache.jcache.config=classpath:ehcache.xml
+
+rest.api.version=1.0.0
