--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:mysql://localhost:3306/testdb
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=ocs*360
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
