add delete to ADMIN role and some exception scenario

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,5 @@ spring.security.token.secret=HardToQuesSecret
 spring.cache.jcache.config=classpath:ehcache.xml
 
 rest.api.version=1.0.0
+server.error.include-stacktrace=never
+server.error.include-message=always
