--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -3,8 +3,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/testdb
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=ocs*360
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.show-sql=true
 
 #Production,Dev,Local
@@ -15,3 +15,7 @@ spring.security.token.expirationTime=300000
 spring.security.token.secret=HardToQuesSecret
 
 spring.cache.jcache.config=classpath:ehcache.xml
+
+rest.api.version=1.0.0
+server.error.include-stacktrace=never
+server.error.include-message=always
